form submission finished

--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@
                         <div class="col">
                             <div class="form-outline">
                                 <label class="form-label" for="form6Example1">Name</label>
-                                <input type="text" id="form6Example1" class="form-control" />
+                                <input name="name" type="text" id="form6Example1" class="form-control" />
                             </div>
                         </div>
                         <div class="col">
                             <div class="form-outline">
                                 <label class="form-label" for="form6Example2">Place</label>
-                                <input type="text" id="form6Example2" class="form-control" />
+                                <input name="place" type="text" id="form6Example2" class="form-control" />
 
                             </div>
                         </div>
@@ -245,21 +245,21 @@
                     <!-- Email input -->
                     <div class="form-outline mb-4">
                         <label class="form-label" for="form6Example5">Email</label>
-                        <input name="emailAddress" type="email" id="form6Example5" class="form-control" />
+                        <input name="email" type="email" id="form6Example5" class="form-control" />
 
                     </div>
 
                     <!-- Number input -->
                     <div class="form-outline mb-4">
                         <label class="form-label" for="form6Example6">Phone</label>
-                        <input type="number" id="form6Example6" class="form-control" />
+                        <input name="phone" type="number" id="form6Example6" class="form-control" />
 
                     </div>
 
                     <!-- Message input -->
                     <div class="form-outline mb-4">
                         <label class="form-label" for="form6Example7">Message</label>
-                        <textarea class="form-control" id="form6Example7" rows="4"></textarea>
+                        <textarea name="message" class="form-control" id="form6Example7" rows="4"></textarea>
 
                     </div>
 
